# console-music-player

./: Cargo.toml  README.md  build.rs  console-music-player.code-workspace
.cargo/: config.toml
.claude/: settings.local.json
ipod-rs/: Cargo.toml
ipod-rs/src/: detect.rs  itunesdb.rs  itunessd.rs  lib.rs
src/: amazon_cdp.rs  app.rs  config.rs  error.rs  gematria.rs  keychain.rs  main.rs  platform.rs  tags.rs  util.rs  visualizer.rs
src/amazon/: mod.rs
src/device/: apple.rs  ipod_ums.rs  mod.rs
src/media/: mod.rs
src/organize/: mod.rs
src/p2p/: catalog.rs  crypto.rs  identity.rs  keystore.rs  lan_beacon.rs  mod.rs  network.rs  node.rs  party.rs  transfer.rs  trust.rs  wire.rs
src/player/: mod.rs
src/playlist/: mod.rs
src/tracker/: mod.rs
src/transfer/: mod.rs
src/ui/: amazon.rs  dedup.rs  library.rs  mod.rs  organize.rs  overlays.rs  p2p_peers.rs  party_line.rs  playlists.rs  remote_library.rs  repair.rs  settings.rs  sources.rs  transfer.rs
